# pdf-data-extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pdf_data_extractor/: __init__.py  extract_img_from_pdf.py  extract_text_complex.py  extract_text_simple.py
